tests/ui/const-generics/generic_const_parameter_types/bad_inference.stderr
error: anonymous constants with inferred types are not yet supported
  --> $DIR/bad_inference.rs:17:25
   |
LL |     let a = foo::<_, _, { [12_u8; 2] }>();
   |                         ^^^^^^^^^^^^^^

error: anonymous constants with inferred types are not yet supported
  --> $DIR/bad_inference.rs:21:34
   |
LL |     let b: [u8; 2] = foo::<_, _, { [12; _] }>();
   |                                  ^^^^^^^^^^^

error: aborting due to 2 previous errors

